-
Type:
Bug
-
Status: Resolved
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: Impala 2.0
-
Fix Version/s: Impala 2.9.0
-
Component/s: Catalog
-
Labels:
-
Target Version:
The warning that users see when volume mapping information is not available is not very clear, and can be repeated many, many times:
"Unknown disk id. This will negatively affect performance. "
"Check your hdfs settings to enable block location metadata.
We should improve this to a) not print out so frequently b) point more directly to the setting to enable block data c) more clearly explain the problem.